--- a/design/answerQuest.html
+++ b/design/answerQuest.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
+    <!-- треба додати щоб цей файл завантажувався коли користувач відповів на запитання -->
+    <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
-    <meta charset="UTF-8">
-    <title>SpotifyProject</title>
+    <title>Spotify Project</title>
     <style>
         body{
             font-family: "Nunito", sans-serif;
             background: black;
             height: 100%;
-            display: flex;
+            display: grid;
             align-items: center;
             justify-content: center;
             padding-top: 70px;
@@ -28,38 +29,6 @@
 
             color: #FFFFFF;
         }
-        .btn{
-            position: relative;
-            width: 100%;
-            height: 100%;
-            background: rgba(2, 167, 65, 0.65);
-            border-radius: 16px;
-            align-content: center;
-            justify-content: center;
-            display: flex;
-            outline: none;
-
-            border: #00C24A;
-            text-align: center;
-            font-family: "Nunito", sans-serif;
-            color: white;
-            font-size: 20px;
-        }
-        .btn:active{
-            background-color: #FFFFFF;
-            color: black;
-        }
-        .btn:hover{
-            background: aquamarine;
-            color: black;
-        }
-        .btn:focus {
-            background-color: #93c288;
-            color: black;
-            outline: none;
-        }
-
-
         .textStyle{
             position: relative;
             width: 100%;
@@ -68,22 +37,24 @@
             font-family: "Nunito", sans-serif;
             font-style: normal;
             font-weight: 800;
-            font-size: 60px;
+            font-size: x-large;
             line-height: 82px;
             display: flex;
             align-items: center;
             text-align: center;
             letter-spacing: 0.1em;
-            text-transform: capitalize;
+            text-transform: uppercase;
 
             color: #00C24A;
         }
-
+        .item{
+            padding: 20px;
+        }
     </style>
 </head>
+
 <body>
 <div class = "container">
-    <div class = "row">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <ul class="navbar-nav">
             <li class="nav-item">
@@ -97,42 +68,20 @@
             </li>
         </ul>
     </nav>
-    </div>
 
     <div class="d-flex align-content-center">
         <div class = "item">
-            <p class="textStyle">Log in with your Spotify account to see your personalized analysis</p>
+            <text class="textStyle" id="answerQuest" >vidpovid' = ty bomj</text>
         </div>
     </div>
 
-    <!--    <div class="d-flex align-content-center">-->
-    <!--        <div class = "item">-->
-    <!--            <button class="btn btn-primary submit">Login</button>-->
-    <!--        </div>-->
-    <!--    </div>-->
-    <div class = "row justify-content-center">
-        <div class = "col-12 col-md-6 ">
-            <button class="btn ">
-                Login
-            </button>
-        </div>
-    </div>
+
 
 </div>
-<script>
-    function myFunction() {
-        var x = document.getElementById("passwordID");
-        if (x.type === "password") {
-            x.type = "text";
-        } else {
-            x.type = "password";
-        }
-    }
-</script>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossOrigin="anonymous"></script>
-
 </body>
 </html>
