--- a/design/register.html
+++ b/design/register.html
@@ -116,7 +116,7 @@
     <!--    </div>-->
     <div class = "row justify-content-center">
         <div class = "col-12 col-md-6 ">
-            <button class="btn ">
+            <button class="btn " onclick="myFunction()">
                 Login
             </button>
         </div>
@@ -125,12 +125,13 @@
 </div>
 <script>
     function myFunction() {
-        var x = document.getElementById("passwordID");
-        if (x.type === "password") {
-            x.type = "text";
-        } else {
-            x.type = "password";
-        }
+        // var x = document.getElementById("passwordID");
+        // if (x.type === "password") {
+        //     x.type = "text";
+        // } else {
+        //     x.type = "password";
+        // }
+        window.location.href="/login"
     }
 </script>
 
