--- a/design/analysis.html
+++ b/design/analysis.html
@@ -37,6 +37,24 @@
       text-transform: capitalize;
       color: #00C24A;
     }
+    .dropdown-item{
+      font-family: "Nunito", sans-serif;
+      color: #FFFFFF;
+    }
+    .dropdown-item:focus{
+      background-color: #93c288;
+      color: black;
+      outline: none;
+    }
+    .dropdown-item:hover{
+      background-color: #93c288;
+
+      color: black
+    }
+    .dropdown-item:active{
+      background: aquamarine;
+      color: black;
+    }
   </style>
 </head>
 
@@ -51,7 +69,17 @@
         <a class="nav-link" href="/analytics" >analytics</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/quest" >quest</a>
+        <div class="dropdown bg-dark">
+          <a class="nav-link dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+            quest
+          </a>
+          <ul class="dropdown-menu " aria-labelledby="dropdownMenuButton1">
+            <!--      ОСЬ ТУТ МІСЦЕ ДЕ СПИСОК ТЕСТІВ              -->
+            <li><a class="dropdown-item" href="/quest">One test</a></li>
+            <li><a class="dropdown-item" href="/quest">Two test</a></li>
+            <li><a class="dropdown-item" href="/quest">Three test</a></li>
+          </ul>
+        </div>
       </li>
     </ul>
   </nav>
