--- a/design/index.html
+++ b/design/index.html
@@ -3,8 +3,8 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>SpotifyProject</title>
@@ -101,6 +101,43 @@
         .item{
             padding: 20px;
         }
+        .dropdown-item{
+            font-family: "Nunito", sans-serif;
+            color: #FFFFFF;
+        }
+        .dropdown-item:focus{
+            background-color: #93c288;
+            color: black;
+            outline: none;
+        }
+        .dropdown-item:hover{
+            background-color: #93c288;
+
+            color: black
+        }
+        .dropdown-item:active{
+            background: aquamarine;
+            color: black;
+        }
+
+        .btn:active{
+            background-color: #FFFFFF;
+            color: black;
+        }
+        .btn:hover{
+            background-color: #93c288;
+            color: black;
+        }
+        .btn:focus {
+            background: aquamarine;
+            color: black;
+            outline: none;
+        }
+
+        .dropdown-menu{
+            font-family: "Nunito", sans-serif;
+            background-color: #3c3f41;
+        }
 
 
     </style>
@@ -117,7 +154,17 @@
                 <a class="nav-link" href="/account" >account</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/quest" >quest</a>
+                <div class="dropdown">
+                    <a class="nav-link dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                        quest
+                    </a>
+                    <!--      ОСЬ ТУТ МІСЦЕ ДЕ СПИСОК ТЕСТІВ              -->
+                    <ul class="dropdown-menu " aria-labelledby="dropdownMenuButton1">
+                        <li><a class="dropdown-item" href="/quest">One test</a></li>
+                        <li><a class="dropdown-item" href="/quest">Two test</a></li>
+                        <li><a class="dropdown-item" href="/quest">Three test</a></li>
+                    </ul>
+                </div>
             </li>
         </ul>
     </nav>
