--- a/design/quest.html
+++ b/design/quest.html
@@ -99,6 +99,24 @@
     .buttonItem{
         padding: 5px;
     }
+    .dropdown-item{
+        font-family: "Nunito", sans-serif;
+        color: #FFFFFF;
+    }
+    .dropdown-item:focus{
+        background-color: #93c288;
+        color: black;
+        outline: none;
+    }
+    .dropdown-item:hover{
+        background-color: #93c288;
+
+        color: black
+    }
+    .dropdown-item:active{
+        background: aquamarine;
+        color: black;
+    }
 
 
 
@@ -142,7 +160,17 @@
                 <a class="nav-link" href="/account" >account</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/quest" >quest</a>
+                <div class="dropdown bg-dark">
+                    <a class="nav-link dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                        quest
+                    </a>
+                    <!--      ОСЬ ТУТ МІСЦЕ ДЕ СПИСОК ТЕСТІВ              -->
+                    <ul class="dropdown-menu " aria-labelledby="dropdownMenuButton1">
+                        <li><a class="dropdown-item" href="/quest">One test</a></li>
+                        <li><a class="dropdown-item" href="/quest">Two test</a></li>
+                        <li><a class="dropdown-item" href="/quest">Three test</a></li>
+                    </ul>
+                </div>
             </li>
         </ul>
     </nav>
