--- a/design/register.html
+++ b/design/register.html
@@ -79,6 +79,24 @@
 
             color: #00C24A;
         }
+        .dropdown-item{
+            font-family: "Nunito", sans-serif;
+            color: #FFFFFF;
+        }
+        .dropdown-item:focus{
+            background-color: #93c288;
+            color: black;
+            outline: none;
+        }
+        .dropdown-item:hover{
+            background-color: #93c288;
+
+            color: black
+        }
+        .dropdown-item:active{
+            background: aquamarine;
+            color: black;
+        }
 
     </style>
 </head>
@@ -94,14 +112,22 @@
                 <a class="nav-link" href="/account" >account</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/quest" >quest</a>
+                <div class="dropdown bg-dark">
+                    <a class="nav-link dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                        quest
+                    </a>
+                    <!--      ОСЬ ТУТ МІСЦЕ ДЕ СПИСОК ТЕСТІВ              -->
+                    <ul class="dropdown-menu " aria-labelledby="dropdownMenuButton1">
+                        <li><a class="dropdown-item" href="/quest">One test</a></li>
+                        <li><a class="dropdown-item" href="/quest">Two test</a></li>
+                        <li><a class="dropdown-item" href="/quest">Three test</a></li>
+                    </ul>
+                </div>
             </li>
         </ul>
     </nav>
     </div>
-   <registerText>register</registerText>
-    <spotifyPlace>spotify account:</spotifyPlace>
-    <passwordText>Password: </passwordText>
+
 
     <div class="d-flex align-content-center">
         <div class = "item">
