--- a/design/answerQuest.html
+++ b/design/answerQuest.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
-    <title>Spotify Project</title>
+    <title>Spotify quest Project</title>
     <style>
         body{
             font-family: "Nunito", sans-serif;
