--- a/design/quest.html
+++ b/design/quest.html
@@ -2,213 +2,242 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
     <title>Spotify Project</title>
 
-  <style>
-    body{
-        font-family: "Nunito", sans-serif;
-        background: black;
-        padding-top: 70px;
-    }
-
-    .navbar-nav .nav-link{
-        font-family: 'Nunito', sans-serif;
-        font-style: normal;
-        font-weight: 500;
-        font-size: large;
-        line-height: 41px;
-        letter-spacing: 0.1em;
-        text-decoration: underline;
-
-        color: #FFFFFF;
-    }
-
-    .testQuestion{
-        position: relative;
-        width: 100%;
-        height: 100%;
-
-        font-family: "Nunito", sans-serif;
-        font-style: normal;
-        font-weight: 800;
-        font-size: 60px;
-        line-height: 82px;
-        display: flex;
-        align-items: normal;
-        letter-spacing: 0.1em;
-        text-transform: capitalize;
-        text-align: start;
-
-        color: #FFFFFF;
-    }
-    .textStyle{
-        position: relative;
-        width: 100%;
-        height: 100%;
-
-        font-family: "Nunito", sans-serif;
-        font-style: normal;
-        font-weight: 800;
-        font-size: 60px;
-        line-height: 82px;
-        display: flex;
-        align-items: center;
-        text-align: center;
-        letter-spacing: 0.1em;
-        text-transform: capitalize;
-
-        color: #00C24A;
-    }
-
-    .btn{
-        position: relative;
-        background: rgba(2, 167, 65, 0.65);
-        border-radius: 16px;
-        align-content: center;
-        justify-content: center;
-        display: flex;
-        outline: none;
-
-        border: #00C24A;
-        text-align: start;
-        font-family: "Nunito", sans-serif;
-        color: white;
-        font-size: 20px;
-    }
-
-    .btn:active{
-        background-color: #FFFFFF;
-        color: black;
-    }
-    .btn:hover{
-        background: aquamarine;
-        color: black;
-    }
-    .btn:focus {
-        background-color: #93c288;
-        color: black;
-        outline: none;
-    }
-    .item{
-        padding: 20px;
-    }
-    .buttonItem{
-        padding: 5px;
-    }
-    .dropdown-item{
-        font-family: "Nunito", sans-serif;
-        color: #FFFFFF;
-    }
-    .dropdown-item:focus{
-        background-color: #93c288;
-        color: black;
-        outline: none;
-    }
-    .dropdown-item:hover{
-        background-color: #93c288;
-
-        color: black
-    }
-    .dropdown-item:active{
-        background: aquamarine;
-        color: black;
-    }
-
-
-
-
-  </style>
-    <script>
-
-        function changeText() {
-            var obj = document.getElementById("testQuestion");
-            if (obj.style.display === "none" ) {
-                obj.style.display = "flex";
-            }
-
-                var element1 = document.getElementById('answer1');
-                var element2 = document.getElementById('answer2');
-                var element3 = document.getElementById('answer3');
-                var element4 = document.getElementById('answer4');
-                var element5 = document.getElementById('testQuestion');
-                var element6 = document.getElementById('testName');
-                element1.innerHTML = 'New Text';
-                element2.innerHTML = 'New Text';
-                element3.innerHTML = 'New Text';
-                element4.innerHTML = 'New Text';
-                element5.innerHTML = 'New Text';
-                element6.innerHTML = 'New Text';
-
+    <style>
+        body {
+            font-family: "Nunito", sans-serif;
+            background: black;
+            padding-top: 70px;
         }
 
+        .navbar-nav .nav-link {
+            font-family: 'Nunito', sans-serif;
+            font-style: normal;
+            font-weight: 500;
+            font-size: large;
+            line-height: 41px;
+            letter-spacing: 0.1em;
+            text-decoration: underline;
 
-    </script>
+            color: #FFFFFF;
+        }
+
+        .testQuestion {
+            position: relative;
+            width: 100%;
+            height: 100%;
+
+            font-family: "Nunito", sans-serif;
+            font-style: normal;
+            font-weight: 800;
+            font-size: 60px;
+            line-height: 82px;
+            display: flex;
+            align-items: normal;
+            letter-spacing: 0.1em;
+            text-transform: capitalize;
+            text-align: start;
+
+            color: #FFFFFF;
+        }
+
+        .textStyle {
+            position: relative;
+            width: 100%;
+            height: 100%;
+
+            font-family: "Nunito", sans-serif;
+            font-style: normal;
+            font-weight: 800;
+            font-size: 60px;
+            line-height: 82px;
+            display: flex;
+            align-items: center;
+            text-align: center;
+            letter-spacing: 0.1em;
+            text-transform: capitalize;
+
+            color: #00C24A;
+        }
+
+        .btn {
+            position: relative;
+            background: rgba(2, 167, 65, 0.65);
+            border-radius: 16px;
+            align-content: center;
+            justify-content: center;
+            display: flex;
+            outline: none;
+
+            border: #00C24A;
+            text-align: start;
+            font-family: "Nunito", sans-serif;
+            color: white;
+            font-size: 20px;
+        }
+
+        .btn:active {
+            background-color: #FFFFFF;
+            color: black;
+        }
+
+        .btn:hover {
+            background: aquamarine;
+            color: black;
+        }
+
+        .btn:focus {
+            background-color: #93c288;
+            color: black;
+            outline: none;
+        }
+
+        .item {
+            padding: 20px;
+        }
+
+        .buttonItem {
+            padding: 5px;
+        }
+
+        .dropdown-item {
+            font-family: "Nunito", sans-serif;
+            color: #FFFFFF;
+        }
+
+        .dropdown-item:focus {
+            background-color: #93c288;
+            color: black;
+            outline: none;
+        }
+
+        .dropdown-item:hover {
+            background-color: #93c288;
+
+            color: black
+        }
+
+        .dropdown-item:active {
+            background: aquamarine;
+            color: black;
+        }
+    </style>
+
+
 </head>
 <body>
-<div class ="container">
-    <div class = "row">
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="/">main</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/account" >account</a>
-            </li>
-            <li class="nav-item">
-                <div class="dropdown bg-dark">
-                    <a class="nav-link dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                        quest
-                    </a>
-                    <!--      ОСЬ ТУТ МІСЦЕ ДЕ СПИСОК ТЕСТІВ              -->
-                    <ul class="dropdown-menu " aria-labelledby="dropdownMenuButton1">
-                        <li><a class="dropdown-item" href="/quest">One test</a></li>
-                        <li><a class="dropdown-item" href="/quest">Two test</a></li>
-                        <li><a class="dropdown-item" href="/quest">Three test</a></li>
-                    </ul>
-                </div>
-            </li>
-        </ul>
-    </nav>
+<div class="container">
+    <div class="row">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">main</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/account">account</a>
+                </li>
+                <li class="nav-item">
+                    <div class="dropdown bg-dark">
+                        <a class="nav-link dropdown-toggle" type="button" id="dropdownMenuButton1"
+                           data-bs-toggle="dropdown" aria-expanded="false">
+                            quest
+                        </a>
+                        <!--      ОСЬ ТУТ МІСЦЕ ДЕ СПИСОК ТЕСТІВ              -->
+                        <ul class="dropdown-menu " aria-labelledby="dropdownMenuButton1">
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </nav>
     </div>
 
     <div class="d-flex align-content-start">
-        <div class = "item">
-            <p class="textStyle" id="testName">Choose the test</p>
+        <div class="item">
+            <p class="textStyle" id="testName"></p>
         </div>
     </div>
 
-    <div class = "d-flex align-content-center">
-        <div class = "item">
-        <div class="col-12">
-            <text class="testQuestion" id="testQuestion" style="display: none;">question of test</text>
-        </div>
+    <div class="d-flex align-content-center">
+        <div class="item">
+            <div class="col-12">
+                <text class="testQuestion" id="testQuestion" style="display: flex;"></text>
+            </div>
         </div>
     </div>
 
     <div class="d-block align-content-center" id="buttonContainer"></div>
     <script>
-        // Array of records from the database
-        var records1 = [
-            { id: 1, text: "Question 1" },
-            { id: 2, text: "Random text: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temp" },
-            { id: 3, text: "Question 3" }
-        ];
-        var records2 = [
-            { id: 1, text: "Question " },
-            { id: 2, text: "Question " },
-            { id: 3, text: "Question " }
-        ];
+
+        let scores = [0,0,0,0,0]
+        let answerScores
+
+
+        async function getQuests() {
+            let response = await fetch('http://localhost:8888/api/quest')
+            let content = await response.json()
+
+            let list = document.querySelector('.dropdown-menu')
+
+            for (key in content) {
+                list.innerHTML += '<li><a class="dropdown-item" href="/quest?quest='+ content[key].id + '">'
+                    + content[key].name + '</a></li>'
+            }
+
+            const questId = urlParams.get('quest');
+
+            response = await fetch('http://localhost:8888/api/quest?questId='+ questId)
+            content = await response.json()
+            var nameOfTest = document.getElementById('testName')
+            nameOfTest.innerHTML = content[0].name
+        }
+
+
+        const urlParams = new URLSearchParams(window.location.search);
+        const questId = urlParams.get('quest');
+
+        let questionNum = 1;
+
+        let answerRecords;
+
+        getQuests()
+
+        getQuestion()
+
+
+        async function getQuestion() {
+            deleteButtons()
+
+            if (questionNum === 5) {
+                showFinal()
+                return
+            }
+
+            let response = await fetch('http://localhost:8888/api/questionWithAnswers?questId=' + questId + '&questionNum=' + questionNum)
+            let content = await response.json()
+
+            answerRecords = content[0].answers.map(answer => ({id: answer.id, text: answer.answer}));
+
+            answerScores = content[0].answers.map(answer => ({id: answer.id, scores: [answer.c1, answer.c2, answer.c3, answer.c4, answer.c5]}));
+
+
+            generateButtons(content[0].question, answerRecords)
+        }
 
         // Function to generate buttons and change text
-        function generateButtons(records) {
-            var container = document.getElementById("buttonContainer");
+        function generateButtons(question, answers) {
 
-            records.forEach(function(record) {
+            var nameOfTest = document.getElementById('testQuestion')
+            nameOfTest.innerHTML = question
+
+
+            var container = document.getElementById("buttonContainer");
+            answers.forEach(function (record) {
                 var elem = document.createElement("div");
                 elem.className = "row justify-content-center";
 
@@ -217,14 +246,17 @@
 
                 var button = document.createElement("button");
                 button.className = "btn";
+                button.value = record.id;
 
                 button.textContent = record.text;
 
-                var i = 0;
-                button.onclick = function (){
-                    i++;
-                    activateText('Hello!', records1);
-
+                button.onclick = function () {
+                    questionNum ++
+                    let scores2 = answerScores.find(obj => obj.id === parseInt(button.value)).scores
+                    for (let i = 0; i < scores.length; i++) {
+                        scores.splice(i, 1, scores[i] + scores2[i]);
+                    }
+                    getQuestion()
                 }
 
                 buttonItem.appendChild(button);
@@ -233,46 +265,44 @@
             });
         }
 
-        function activateText(someText, records){
-            var obj = document.getElementById("testQuestion");
-            if (obj.style.display === "none" ) {
-                obj.style.display = "flex";
-            }
-            var element5 = document.getElementById('testQuestion');
-            element5.innerHTML = someText;
-            deleteButtons();
-            generateButtons(records);
-        }
         function deleteButtons() {
             var container = document.getElementById("buttonContainer");
             container.innerHTML = ""; // Remove all child elements
         }
 
+        async function showFinal() {
+            let maxIndex = scores.indexOf(Math.max(...scores));
 
-        // Call the function to generate buttons
-        generateButtons(records2);
+            let response = await fetch('http://localhost:8888/api/final/' + questId)
+            let content = await response.json()
+
+            var nameOfTest = document.getElementById('testQuestion')
+            nameOfTest.innerHTML = 'Congratulation. You are ' + content[maxIndex].text
+        }
+
+
     </script>
 
-<!--        <div class = "d-flex align-content-center">-->
-<!--            <div class = "buttonItem">-->
-<!--                <button class = "btn" id ="answer1" onclick = "changeText()">question oneLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</button>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class = "d-flex align-content-center">-->
-<!--            <div class = "buttonItem">-->
-<!--                <button class = "btn" id = "answer2" onclick = "changeText()">question two</button>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    <div class = "d-flex align-content-center">-->
-<!--        <div class = "buttonItem">-->
-<!--            <button class = "btn" id = "answer3" onclick = "changeText()">question three</button>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    <div class = "d-flex align-content-center">-->
-<!--        <div class = "buttonItem">-->
-<!--            <button class = "btn" id = "answer4" onclick = "changeText()">question four</button>-->
-<!--        </div>-->
-<!--    </div>-->
+    <!--        <div class = "d-flex align-content-center">-->
+    <!--            <div class = "buttonItem">-->
+    <!--                <button class = "btn" id ="answer1" onclick = "changeText()">question oneLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</button>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--        <div class = "d-flex align-content-center">-->
+    <!--            <div class = "buttonItem">-->
+    <!--                <button class = "btn" id = "answer2" onclick = "changeText()">question two</button>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--    <div class = "d-flex align-content-center">-->
+    <!--        <div class = "buttonItem">-->
+    <!--            <button class = "btn" id = "answer3" onclick = "changeText()">question three</button>-->
+    <!--        </div>-->
+    <!--    </div>-->
+    <!--    <div class = "d-flex align-content-center">-->
+    <!--        <div class = "buttonItem">-->
+    <!--            <button class = "btn" id = "answer4" onclick = "changeText()">question four</button>-->
+    <!--        </div>-->
+    <!--    </div>-->
 
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
