--- a/design/register.html
+++ b/design/register.html
@@ -97,6 +97,10 @@
             background: aquamarine;
             color: black;
         }
+        .dropdown-menu{
+            font-family: "Nunito", sans-serif;
+            background-color: #3c3f41;
+        }
 
     </style>
 </head>
@@ -118,9 +122,7 @@
                     </a>
                     <!--      ОСЬ ТУТ МІСЦЕ ДЕ СПИСОК ТЕСТІВ              -->
                     <ul class="dropdown-menu " aria-labelledby="dropdownMenuButton1">
-                        <li><a class="dropdown-item" href="/quest">One test</a></li>
-                        <li><a class="dropdown-item" href="/quest">Two test</a></li>
-                        <li><a class="dropdown-item" href="/quest">Three test</a></li>
+
                     </ul>
                 </div>
             </li>
@@ -159,6 +161,24 @@
         // }
         window.location.href="/login"
     }
+
+        async function getQuests() {
+        let response = await fetch('http://localhost:8888/api/quest')
+        let content = await response.json()
+
+        let list = document.querySelector('.dropdown-menu')
+
+        console.log(content)
+
+        for (key in content) {
+        list.innerHTML += '<li><a class="dropdown-item" href="/quest?quest='+ content[key].id + '">'
+        + content[key].name + '</a></li>'
+    }
+
+    }
+
+        getQuests()
+
 
 </script>
 
