--- a/design/analysis.html
+++ b/design/analysis.html
@@ -189,7 +189,7 @@
                 "translate(" + margin.left + "," + margin.top + ")");
       
       //Read the data
-      d3.json("json/topTraks.json",
+      d3.json("json/topTracks.json",
       
         // // When reading the csv, I must format variables:
         // function(d){
